# mcp_pr_recommender

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  pyproject.toml
.github/workflows/: ci.yml  docker-build.yml  docker-ci.yml  lint.yml  release.yml
.history/: pyproject_20250529215201.toml  pyproject_20250530055747.toml  pyproject_20250530055758.toml  pyproject_20250530070613.toml  pyproject_20250530085933.toml  pyproject_20250530085946.toml  pyproject_20250531103443.toml  pyproject_20250531103806.toml  pyproject_20250531103854.toml  pyproject_20250603164609.toml
.history/src/: server_20250522121136.py  server_20250602194628.py
.history/src/cli/: __init___20250529215301.py
config/: server.yaml
scripts/: dev-setup.sh  test-quick.sh
src/: server.py
src/api/: __init__.py
src/lib/models/: agent_models.py  batching_models.py  recommender_models.py
src/lib/state/: manager.py
src/mcp_pr_recommender/: __init__.py  cli.py  config.py  main.py
src/mcp_pr_recommender/models/pr/: recommendations.py
src/mcp_pr_recommender/services/: atomicity_validator.py  grouping_engine.py  semantic_analyzer.py
src/mcp_pr_recommender/tools/: __init__.py  feasibility_analyzer_tool.py  pr_recommender_tool.py  strategy_manager_tool.py  validator_tool.py
src/pr_recommender/: config.py
src/pr_recommender/models/: git_models.py  pr_models.py
src/pr_recommender/models/pr/: recommendations.py
src/pr_recommender/services/: __init__.py  atomicity_validator.py  grouping_engine.py  semantic_analyzer.py
src/pr_recommender/tools/: feasibility_analyzer_tool.py  pr_recommender_tool.py  validator_tool.py
src/services/: grouping_service.py  validation_service.py
src/tools/: batch_processor_tool.py  batch_splitter_tool.py  file_grouper_tool.py  group_validator_tool.py
tests/: __init__.py  conftest.py
tests/unit/: test_example.py  test_example.py.bak  test_server.py  test_server.py.bak
tests/unit/services/: test_atomicity_validator.py  test_grouping_engine.py  test_semantic_analyzer.py
tests/unit/tools/: test_feasibility_analyzer_tool.py  test_pr_recommender_tool.py  test_strategy_manager_tool.py  test_tools_simple.py  test_validator_tool.py
tests/utils/factories/: analysis.py  base.py  files.py  scenarios.py  tools.py
